--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,18 @@
   "author": "end to end",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@mui/icons-material": "^5.15.9",
+    "@mui/material": "^5.15.9",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "react-bootstrap": "^2.10.1",
+    "react-router-dom": "^6.22.1"
   }
 }
