--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.3",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
+    "@mui/system": "^5.15.11",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
