--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,13 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
-    "nodemon": "^3.0.2",
+    "nodemon": "^3.1.0",
+    "razorpay": "^2.9.2",
     "react-bootstrap": "^2.10.1",
     "react-router-dom": "^6.22.1"
   }
