--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,14 @@
     "@mui/material": "^5.15.9",
     "@mui/system": "^5.15.11",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "nodemailer": "^6.9.11",
     "nodemon": "^3.1.0",
     "razorpay": "^2.9.2",
     "react-bootstrap": "^2.10.1",
